<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/overlay_background">

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/login_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/login_icon"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/login_appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textColor="@color/overlay_text"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_appname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:text="@string/login_text"
            android:textColor="@color/overlay_text"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_sub"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/login_bullets"
            android:textColor="@color/overlay_text"
            android:textSize="18sp" />

        <Button
            android:id="@+id/login_wunderlist_button"
            android:layout_width="256sp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="128dp"
            android:background="#A0FF2222"
            android:text="@string/login_wunderlist"
            android:textAllCaps="false"
            android:textColor="@color/overlay_text"
            android:textSize="20sp" />


    </RelativeLayout>


</RelativeLayout>