<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/overlay_background">

    <ImageButton
        android:id="@+id/overview_close"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp"
        android:background="@null"
        android:src="@drawable/ic_action_close" />

    <TextView
        android:id="@+id/overview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/app_name"
        android:textColor="@color/overlay_text"
        android:textSize="32sp" />

    <RelativeLayout
        android:id="@+id/overview_recent_scans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/overview_title"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp">

        <LinearLayout
            android:id="@+id/recent_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/recent_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:text="@string/recent_scans"
                android:textColor="@color/overlay_text"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/recent_scans_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recent_title"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="6dp"
            android:orientation="vertical">

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/overview_recommendations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/overview_recent_scans"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp">

        <LinearLayout
            android:id="@+id/recommendation_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/recommendation_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:text="@string/recommendations"
                android:textColor="@color/overlay_text"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/recommendation_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recommendation_title"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="6dp"
            android:orientation="vertical">

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/overview_recommendations"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_box"
        android:text="@string/go_to_wunderlist"
        android:textAllCaps="false"
        android:textColor="@color/overlay_text"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_launcher" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginLeft="4dp"
                android:background="@null"
                android:gravity="left|center_vertical"
                android:text="@string/settings"
                android:textAllCaps="false"
                android:textColor="@color/overlay_text"
                android:textSize="24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_launcher" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginLeft="4dp"
                android:background="@null"
                android:gravity="left|center_vertical"
                android:text="@string/help"
                android:textAllCaps="false"
                android:textColor="@color/overlay_text"
                android:textSize="24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_launcher" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginLeft="4dp"
                android:background="@null"
                android:gravity="left|center_vertical"
                android:text="@string/quick_start"
                android:textAllCaps="false"
                android:textColor="@color/overlay_text"
                android:textSize="24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_launcher" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginLeft="4dp"
                android:background="@null"
                android:gravity="left|center_vertical"
                android:text="@string/rate_us"
                android:textAllCaps="false"
                android:textColor="@color/overlay_text"
                android:textSize="24dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>